# Codex

./: .gitignore  AGENTS.md  CHANGES.md  GOALS.md  PHILOSOPHY.md  PLAN.md  README.md  TODO.md  justfile  shell_panel_demo.py
.agents/context/: 2025-11-02_apply_patch_reason_context.jsonl  2025-11-02_mcp_templates_context.jsonl  2025-11-03_agents_docs_context.jsonl  2025-11-04_apply_patch_context.jsonl  2025-11-04_apply_patch_diagnostics_context.jsonl  2025-11-04_apply_patch_fallback_context.jsonl  2025-11-04_apply_patch_reason_context.jsonl  2025-11-04_apply_patch_summary_context.jsonl  2025-11-05_apply_patch_autodetect_context.jsonl  2025-11-06_apply_patch_context.jsonl  2025-11-06_background_shell_context.jsonl  2025-11-07_agents_context_opt_in_context.jsonl  2025-11-07_exec_streams_context.jsonl  2025-11-07_sandbox_assessment_context.jsonl  2025-11-08_exec_metadata_context.jsonl  2025-11-09_foreground_shell_timeouts_context.jsonl  2025-11-09_mcp_elicitation_context.jsonl  2025-11-09_rmcp_resource_context.jsonl  2025-11-10_apply-patch_context.jsonl  2025-11-10_apply_patch_context.jsonl  2025-11-10_background_shell_context.jsonl  2025-11-10_code-finder_context.jsonl  2025-11-11_background_shell_context.jsonl  2025-11-12_shell-panel_context.jsonl  2025-11-13_background-shell_context.jsonl  2025-11-13_navigator_context.jsonl
.agents/skills/: SKILLS.md
.agents/skills/app-server-downstream/: SKILL.md
.agents/skills/downstream-ai-first/: SKILL.md
.agents/skills/reflective-sidecar/: SKILL.md
.agents/skills/runtime-extensions/: SKILL.md
.agents/skills/tui-downstream/: SKILL.md
.agents/skills/upstream-sync/: SKILL.md
.tasks/: TASK-003.task
codex-py/: .gitignore  Makefile  README.md  pyproject.toml
codex-py/src/codex_core/: __init__.py  approval.py  cli.py  client.py  codex.py  config.py  history_compactor.py  mcp_client.py  models.py  session.py  token_counter.py
codex-py/src/codex_core/tools/: __init__.py
codex-py/src/codex_patch/: __init__.py  applier.py  parser.py  symbols.py
codex-py/src/codex_protocol/: __init__.py  events.py  items.py  submissions.py
codex-py/src/codex_shell/: __init__.py  background.py  executor.py  sandbox.py
codex-py/src/codex_tui/: __init__.py  __main__.py  app.py  textual_app.py
codex-py/src/codex_tui/styles/: app.tcss
codex-py/src/codex_tui/widgets/: __init__.py  approval.py  chat.py  chat_widget.py  commands.py  composer.py  diff_view.py  input.py  markdown_view.py  renderers.py  selection.py  shell_panel.py  spinner.py  status.py
codex-py/tests/: __init__.py  test_approval.py  test_chatgpt_api.py  test_e2e.py  test_integration.py  test_patch.py  test_protocol.py  test_session.py  test_tui_widgets.py
codex-rs/: .gitignore  CODEBASE_SEARCH.md  CODEBASE_SEARCH_README.md  Cargo.toml  INTEGRATION_GUIDE.md  VERIFICATION_REPORT.md  apply_patch  justfile
codex-rs/.agents/context/: 2025-11-10_code_finder_context.jsonl  2025-11-10_navigator_context.jsonl  (+8 more)
codex-rs/.serena/: project.yml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/apply-patch/: Cargo.toml  TODO.md  apply_patch_tool_instructions.md
codex-rs/cli/: Cargo.toml
codex-rs/code-chunker/: Cargo.toml
codex-rs/code-chunker/benches/: chunker_bench.rs
codex-rs/code-chunker/src/: ast_analyzer.rs  chunker.rs  config.rs  error.rs  language.rs  lib.rs  strategy.rs
codex-rs/code-finder/: Cargo.toml  code_finder_tool_instructions.md
codex-rs/codebase-context/: Cargo.toml
codex-rs/codebase-context/src/: context_provider.rs  error.rs  lib.rs  query_analyzer.rs  ranking.rs
codex-rs/codebase-context/tests/: integration_test.rs
codex-rs/codebase-indexer/: Cargo.toml
codex-rs/codebase-indexer/src/: config.rs  error.rs  indexer.rs  lib.rs  state.rs
codex-rs/codebase-retrieval/: Cargo.toml
codex-rs/codebase-retrieval/benches/: retrieval_bench.rs
codex-rs/codebase-retrieval/src/: config.rs  error.rs  fusion.rs  fuzzy.rs  lib.rs  rerank.rs  result.rs  retrieval.rs
codex-rs/core/: Cargo.toml  config.schema.json  prompt.md
codex-rs/docs/: code_finder.md  codex_mcp_interface.md  navigator.md  navigator_ideal.md  protocol_v1.md
codex-rs/embeddings/: Cargo.toml
codex-rs/embeddings/src/: error.rs  lib.rs  service.rs
codex-rs/navigator/: Cargo.toml  TODO.md  navigator_tool_instructions.md
codex-rs/navigator/src/: advisor.rs  atlas.rs  auto_facet.rs  client.rs  daemon.rs  freeform.rs  history.rs  insights.rs  lib.rs  metadata.rs  planner.rs  project.rs  proto.rs  summary.rs  workspace.rs
codex-rs/navigator/src/index/: builder.rs  cache.rs  codeowners.rs  coverage.rs  git.rs  guardrail.rs  health.rs  insight_history.rs  mod.rs  model.rs  personal.rs  references.rs  search.rs  storage.rs  text.rs
codex-rs/protocol/: Cargo.toml
codex-rs/scripts/: scout_map.py  scout_pack.py
codex-rs/shell-model/: Cargo.toml
codex-rs/shell-model/src/: lib.rs
codex-rs/tui/: Cargo.toml
codex-rs/vector-store/: Cargo.toml
codex-rs/vector-store/src/: chunk.rs  error.rs  lib.rs  store.rs  store_simple.rs
docs/: advanced.md  claudex.md  code-finder.md  collaboration.md  config.md  example-config.md  fork-maintenance.md  getting-started.md  memory.md  native-reflective-window.md  reflective-sidecar-window.md  slash_commands.md  ux-issue-12047-matrix.md
docs/rfcs/: 0001-mcp-management-overhaul.md  0002-apply-patch-autodetect.md
prototypes/: shell_panel_demo.py
reports/logs/: 20251110T205307Z.json  20251110T205318Z.json  20251110T205332Z.json  20251110T205342Z.json  20251110T205352Z.json  20251110T205421Z.json  20251110T205439Z.json  20251110T205532Z.json  20251111T032001Z.json  20251111T032013Z.json  20251111T033409Z.json  20251111T033420Z.json  20251111T033429Z.json  20251111T033440Z.json  20251111T033454Z.json  20251111T033504Z.json  20251111T033520Z.json  20251111T033557Z.json  20251111T033752Z.json  20251111T034055Z.json  20251111T034649Z.json  20251111T034801Z.json  20251111T074519Z.json
scripts/: bootstrap-downstream-clone.sh  install-claudex.sh  start-downstream-branch.sh  sync-upstream-main.sh
(+573 files in other folders)
