[project]
name = "codex-py"
version = "0.1.0"
description = "Codex CLI/TUI - Python implementation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "OpenAI" }
]
keywords = ["codex", "cli", "tui", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]

dependencies = [
    "rich>=13.9.0",
    "textual>=3.0.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "mcp>=1.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
# Use codex-py to avoid conflict with official codex-rs binary
# Main TUI uses Textual full-screen interface
codex-py = "codex_tui.textual_app:main"
# Legacy inline TUI (rich-based)
codex-py-inline = "codex_tui.app:main"
# Direct exec without TUI
codex-py-exec = "codex_core.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_protocol", "src/codex_core", "src/codex_shell", "src/codex_tui", "src/codex_patch"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.envs.default]
path = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# E501 - line too long (handled by formatter)
# SIM102 - nested if can be merged (often more readable separate)
# SIM105 - contextlib.suppress (explicit try/except is clearer)
# SIM115 - context manager for files (not always possible in async)
ignore = ["E501", "SIM102", "SIM105", "SIM115"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
