[package]
name = "codex-codebase-context"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
codex-codebase-indexer = { workspace = true }
codex-codebase-retrieval = { workspace = true }
codex-vector-store = { workspace = true }
codex-code-chunker = { workspace = true }

# External
anyhow = { workspace = true }
log = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
