[package]
edition = "2024"
name = "codex-embeddings"
version = { workspace = true }

[lib]
name = "codex_embeddings"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
fastembed = "4.8"
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio-test = { workspace = true }
