[package]
name = "codex-navigator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json", "macros", "tokio", "http1", "query"] }
base64 = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
notify = { workspace = true }
nucleo-matcher = { workspace = true }
once_cell = "1.20.2"
snap = "1.1.1"
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
smallvec = "1.13.2"
textwrap = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "macros", "serde"] }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-markdown = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-toml = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-yaml = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
regex = "1"
percent-encoding = "2"
memchr = "2.7"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
